# FreeHeroes

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_RU.md  update_translations.bat  update_translations.sh
cmake/: DepsUIPostProcessor.cmake  ExportLib.h.in  GitCommit.hpp.in  clangFormat.py  headerOnlyStub.cpp.in  installer.cmake  mocWrapper.cmake.in  qrcTemplate.qrc.in  qt_helpers.cmake  staticCheck.cmake  targets.cmake  translationsRelease.cmake  utils.cmake
docs/en/: BattleEmulator.md  Contribute.md  ProjectGoals.md
docs/ru/: BattleEmulator.md  Contribute.md  ProjectGoals.md
gameResources/: FH.fhindex.txt  FH_HotA_ext.fhindex.txt  FH_SoD_ext.fhindex.txt  FH_loc.fhindex.txt  hota.json  knownResources.json  knownResources.txt  knownResourcesPostProcess.json  sod.json  sod_defs.json  sod_defs_obstacles.json  test.json
gameResources/fh/: artifacts.json  artifacts_presentation.json  dwellings.json  factions.json  factions_presentation.json  heroes.json  heroes_presentation.json  heroes_skills.json  legacy.json  map_banks.json  map_banks_presentation.json  map_objects.json  map_objects_presentation.json  map_obstacles.json  map_visitables.json  object_defs.json  object_defs_mapping.json  object_defs_obstacles.json  resources.json  resources_presentation.json  skills.json  specialities_presentation.json  spells.json  spells_effect.json  spells_presentation.json  terrains.json  terrains_presentation.json  units.json  units_abilities.json  units_presentation.json
gameResources/fh_base.fhmod/: resource.fhsprite.json  stub_hero.fhsprite.json  stub_projectile.fhsprite.json
gameResources/hota_base.fhmod/: artifacts.fhdb.json  buildings.fhdb.json  dwellings.fhdb.json  factions_presentation.fhdb.json  game_rules.fhdb.json  heroes.fhdb.json  heroes_presentation.fhdb.json  heroes_skills.fhdb.json  hota_base.fhdbindex.json  legacy.fhdb.json  map_banks.fhdb.json  map_obstacles.fhdb.json  map_visitables.fhdb.json  object_defs.fhdb.json  object_defs_mapping.fhdb.json  object_defs_obstacles.fhdb.json  players.fhdb.json  resources.fhdb.json  skills.fhdb.json  skills_presentation.fhdb.json  specialities.fhdb.json  spells.fhdb.json  spells_effect.fhdb.json  terrains.fhdb.json  terrains_presentation.fhdb.json  units.fhdb.json  units_abilities.fhdb.json  units_presentation.fhdb.json  ztranslations.fhdb.json
gameResources/hota_factory.fhmod/: hota_factory.fhdb.json  hota_factory.fhdbindex.json
gameResources/hota_fh_ext.fhmod/: FH_HotA_ext.fhindex.txt
gameResources/knownResources/: postProcess.json  sound_hota_161.json  sound_hota_170.json  sound_sod_ab.json  sound_sod_roe.json  sound_sod_sod.json  sprites_hota_161.json  sprites_hota_170.json  sprites_sod_ab.json  sprites_sod_roe.json  sprites_sod_sod.json  videos_hota_170.json  videos_sod_ab.json  videos_sod_roe.json  videos_sod_sod.json
gameResources/sod_base.fhmod/: sod.fhdb.json  sod_base.fhdbindex.json  sod_defs.fhdb.json
gameResources/sod_fh_ext.fhmod/: FH_SoD_ext.fhindex.txt
gameResources/stubs/: unit_normal.fh.json  unit_wide.fh.json
gameResources/templates/: jebus_balanced.json
guiAssets/TranslationSource/: BattleEmulator_de_DE.ts  BattleEmulator_en_US.ts  BattleEmulator_ru_RU.ts  FreeHeroesCore_de_DE.ts  FreeHeroesCore_en_US.ts  FreeHeroesCore_ru_RU.ts  LegacyConverter_de_DE.ts  LegacyConverter_en_US.ts  LegacyConverter_ru_RU.ts  MapToolUI_de_DE.ts  MapToolUI_en_US.ts  MapToolUI_ru_RU.ts
src/: .clang-format
src/API/FreeHeroesAPI/: ApiApplication.cpp  ApiApplication.hpp  ApiApplicationC.cpp  ApiApplicationC.h  ApiApplicationCcheck.c  ApiApplicationJNI.cpp
src/API/FreeHeroesAPITest/: main.cpp
src/App/BattleEmulator/: AdventureControl.cpp  AdventureControl.hpp  ArmyConfigWidget.cpp  ArmyConfigWidget.hpp  ArmyConfigWidget.ui  EmulatorMainWidget.cpp  EmulatorMainWidget.hpp  EmulatorMainWidget.ui  ReplayFileManager.cpp  ReplayFileManager.hpp  main.cpp
src/App/GameLegacyConverterCLI/: main.cpp
src/App/Launcher/: LauncherWindow.cpp  LauncherWindow.hpp  LauncherWindow.ui  main.cpp
src/App/LegacyConverter/: ArchiveParser.cpp  ArchiveParser.hpp  CompressionUtils.cpp  CompressionUtils.hpp  ConverterDialog.cpp  ConverterDialog.hpp  ConverterDialog.ui  DefFile.cpp  DefFile.hpp  KnownResources.cpp  KnownResources.hpp  LegacyMapping.cpp  LegacyMapping.hpp  LocalizationConverter.cpp  LocalizationConverter.hpp  MediaConverter.cpp  MediaConverter.hpp  ResourcePostprocess.cpp  ResourcePostprocess.hpp  SpriteParserLegacy.cpp  SpriteParserLegacy.hpp  ThreadPoolExecutor.cpp  ThreadPoolExecutor.hpp  main.cpp
src/App/LegacyConverterCLI/: main.cpp
src/App/MapEditor/: MapGenTestWidget.hpp  main.cpp
src/App/MapGenTest/: AdventureMap.cpp  AdventureMap.hpp  AdventureMapItem.cpp  AdventureMapItem.hpp  MapGenTestWidget.cpp  MapGenTestWidget.hpp  TerrainGenerator.cpp  main.cpp
src/App/MapScreenshotToolCLI/: main.cpp
src/App/MapToolCLI/: main.cpp
src/App/MapToolUI/: MapToolWindow.cpp  MapToolWindow.hpp  MapToolWindow.ui  SliderSpinWidget.cpp  SliderSpinWidget.hpp  TemplateDifficultyWidget.cpp  TemplateDifficultyWidget.hpp  TemplateDifficultyWidget.ui  TemplatePlayerWidget.cpp  TemplatePlayerWidget.hpp  TemplatePlayerWidget.ui  TemplateSettingsWidget.cpp  TemplateSettingsWidget.hpp  TemplateSettingsWidget.ui  TemplateSettingsWindow.cpp  TemplateSettingsWindow.hpp  TemplateSettingsWindow.ui  main.cpp
src/App/MapUtils/: FH2H3M.cpp  FH2H3M.hpp  FHMap.cpp  FHMap.hpp  H3M2FH.cpp  H3M2FH.hpp  H3MMap.cpp  H3MMap.hpp  H3MMapReflection.hpp  H3MObjects.cpp  H3MObjects.hpp  H3MObjectsReflection.hpp  H3SVGMap.hpp  H3SVGMapReflection.hpp  MapConverter.cpp  MapConverter.hpp  MapFormat.cpp  MapFormat.hpp  MapFormatReflection.hpp  MapObjects.cpp  MapObjects.hpp  MapObjectsReflection.hpp  main.cpp
src/App/PostInstallSetup/: SetupWindow.cpp  SetupWindow.hpp  SetupWindow.ui  main.cpp
src/Core/BattleLogic/: AI.cpp  (+3 more)
src/InstallerExtractor/: Extractor7z.cpp  Extractor7z.hpp  ProcessUtils.hpp  SplashWindow.cpp  SplashWindow.hpp  TmpArchiveResource.cpp  TmpArchiveResource.hpp  TmpDir.cpp  TmpDir.hpp  main.cpp  resources.rc.in
(+436 files in other folders)
